--- a/ginblog/study.html
+++ b/ginblog/study.html
@@ -13,3 +13,8 @@ https://rkdocs.netlify.app/cn/docs/rk-boot/getting-started/echo/
 logrus完全兼容标准的log库，还支持文本、JSON 两种日志输出格式。很多知名的开源项目都使用了这个库，如大名鼎鼎的 docker。
 
 https://darjun.github.io/2020/02/07/godailylib/logrus/
+
+
+//日志分割 比如 只保留一周的
+rotatelogs
+lfshook
