--- a/ginblog/study.html
+++ b/ginblog/study.html
@@ -18,3 +18,17 @@ https://darjun.github.io/2020/02/07/godailylib/logrus/
 //日志分割 比如 只保留一周的
 rotatelogs
 lfshook
+
+
+
+//把panic 日志输出到 文件
+
+https://zhuanlan.zhihu.com/p/245369778
+
+
+//go 设计模式
+https://refactoringguru.cn/design-patterns/observer/go/example
+
+//go 替换testing   的测试库  --> testify
+
+github.com/stretchr/testify
