--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,11 +15,8 @@
 	
 	
     <script >
-
-	
-		 const { createApp } = Vue
 		
-		let app =  createApp({
+		let app =  Vue.createApp({
 		    data() {
 		      return {
 		       num :0
